# ring_buffer

./: CMakeLists.txt  LICENSE  README.md
include/: ring_buf.h  ring_buffer.h
src/: main.cpp
tests/: CMakeLists.txt  ring_buf_test.cc  ring_buffer_test.cpp
